# CC-Images

./: .gitignore  ImageDefs.md  README.md  build_image_manual.py  build_ipa.sh  cc-images.py  cc_images_inspect.py  images_to_build.yaml  pyproject.toml  test_image.sh
.github/workflows/: ci-inspect.yaml  ci-lint.yaml  ci-mount-inspect.yaml  ci.yaml
cc_images/: __init__.py  args.py  artifacts.py  build.py  config.py  image.py  images.yaml  push.py  sites.py  tasks.py  third_party.py
config/: images.yaml  inspect.yaml  sites.yaml
elements/cc-centos/: element-deps  package-installs.yaml
elements/cc-centos-cuda/: element-deps  package-installs.yaml
elements/cc-centos-cuda/environment.d/: 50-centos-cuda-env
elements/cc-centos-cuda/pre-install.d/: 00-cuda-repository
elements/cc-centos/install.d/: 02-nscd
elements/cc-centos/post-install.d/: 02-update-dhcp-timeout  99-centos-motd
elements/cc-centos/pre-install.d/: 10-package-repositories
elements/cc-centos7/: package-installs.yaml
elements/cc-centos7/environment.d/: 01-centos-env
elements/cc-centos8-cuda/: element-deps
elements/cc-centos8-stream-cuda/: element-deps
elements/cc-centos8-stream/environment.d/: 00-centos-env
elements/cc-centos9-stream-cuda/: cloud-cfg.yaml  element-deps  package-installs.yaml
elements/cc-centos9-stream-cuda/environment.d/: 00-centos-env
elements/cc-centos9-stream-cuda/post-install.d/: 02-update-dhcp-timeout
elements/cc-centos9-stream-cuda/pre-install.d/: 50-cuda-repository
elements/cc-centos9-stream/environment.d/: 00-centos-env
elements/cc-cloudfuse/: element-deps  package-installs.yaml  pkg-map
elements/cc-common/: element-deps  package-installs.yaml  pkg-map
elements/cc-common/environment.d/: 00-cc-base  (+1 more)
elements/cc-firewall/: package-installs.yaml
elements/cc-openstack-clients/: package-installs.yaml
elements/cc-rclone/: package-installs.yaml
elements/cc-snapshot/: package-installs.yaml
elements/cc-ubuntu/: cloud-cfg.yaml  dhcp-all-interfaces.sh  element-deps  package-installs.yaml
elements/cc-ubuntu-cuda/: element-deps  package-installs.yaml
elements/cc-ubuntu20.04-cuda/: element-deps
elements/cc-ubuntu20.04-cuda11/: element-deps
elements/cc-ubuntu22.04/: element-deps
elements/cc-ubuntu22.04-cuda/: element-deps
elements/cc-ubuntu24.04/: element-deps
elements/cc-ubuntu24.04-cuda/: element-deps
elements/cc-ubuntu24.04-hwe/: package-installs.yaml
elements/cc-ubuntu24.04-rocm/: element-deps  package-installs.yaml
elements/cloudfuse/: element-deps  pkg-map
elements/cuda/: element-deps  package-installs.yaml
elements/cuda-ubuntu24.04/: package-installs.yaml
elements/python3/: element-deps  package-installs.yaml  pkg-map  requirements.txt
elements/snapshot/: element-deps
elements/ufw/: package-installs.yaml
elements/vendordata/: package-installs.yaml
scripts/: build_images.sh
src/cc_images/: build.py  config.py  main.py  push.py  sites.py  tasks.py
src/config/: third-party.yaml
(+92 files in other folders)
