[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-images"
requires-python = ">=3.8"
dependencies = [
    "diskimage-builder>3.29.0",
    "GitPython>3.1.31",
    "openstacksdk>1.0.1",
    "setuptools"
]
dynamic = ["version"]

[tool.setuptools]
packages = ["cc_images"]
