[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-images"
requires-python = ">=3.8"
dependencies = [
    "diskimage-builder>3.29.0",
    "GitPython>3.1.31",
    "openstacksdk>1.0.1",
    "setuptools",
    "PyYAML>=5.4",
    "requests>=2.25",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "diskimage-builder>3.29.0"
]

[project.scripts]
cc-images-inspect = "cc_images_inspect:main"

[tool.setuptools]
packages = ["cc_images"]
py-modules = ["cc_images_inspect"]
